--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@
 
 
 
+
 body {
   font-family: 'Abril Fatface', cursive;
   margin: 0;
@@ -77,7 +78,10 @@ body {
   top: 0;
   left: 0;
 }
-
+.spline-animation {
+  width: 100%;
+  height: 100%;
+}
 .hero-text {
   font-family: 'Bebas Neue', cursive;
   color: #fff;
