--- a/style.css
+++ b/style.css
@@ -79,8 +79,8 @@ body {
   left: 0;
 }
 .spline-animation {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 .hero-text {
   font-family: 'Bebas Neue', cursive;
