--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   top: 20px;
   left: 20px;
   z-index: 9999;
-  font-family: 'Bebas Neue', cursive;
+  font-family: 'Lora', serif;
   font-size: 60px;
   color: #fff;
   overflow:hidden;
@@ -25,33 +25,29 @@
 }
 
 
-
-
-
-
-
 body {
-  font-family: 'Abril Fatface', cursive;
+  font-family:'Helvetica Neue', Helvetica, Arial, sans-serif;;
   margin: 0;
   padding: 0;
   overflow-y: scroll; /* Enable vertical scrolling */
-  font-family: 'Montserrat', sans-serif;
   cursor: none;
   display: flex;
   flex-direction: column;
   align-items: stretch;
   position: relative;
   overflow-x: hidden;
+
 }
 
 
-.hero h1,
+
+.hero h2,
 .hero p {
   opacity: 0;
   transition: opacity 0.5s ease;
 }
 
-.hero.fade-in h1,
+.hero.fade-in h2,
 .hero.fade-in p {
   opacity: 1;
 }
@@ -83,7 +79,7 @@ body {
   height: 100vh;
 }
 .hero-text {
-  font-family: 'Bebas Neue', cursive;
+  font-family: 'Lora', serif;
   color: #fff;
   text-align: center;
   z-index: 1;
@@ -106,16 +102,48 @@ body {
   position: relative;
 }
 
-.hero-text h1 {
-  font-family: 'Bebas Neue', cursive;
+.hero-text h2 {
+  font-family: 'Lora', serif;
   font-size: 100px;
   margin-bottom: 1rem;
+  font-weight: normal;
+  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
 }
 
 .hero-text p {
   font-size: 30px;
-  font-family: 'Bebas Neue', cursive;
+  font-family: 'Lora', serif;
+  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
 }
+
+.contact-button-container {
+  position: absolute;
+  bottom: 10%; /* Adjust as needed */
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 10; /* Added z-index */
+}
+
+.hero-contact-button {
+  padding: 10px 20px;
+  font-family: 'Lora', serif;
+  font-size: 20px;
+  color: #fff;
+  background: none;
+  border: 2px solid #fff;
+  border-radius: 5px;
+  transition: all 0.3s ease-in-out; /* Changed background to all */
+  cursor: pointer;
+  z-index: 10; /* Added z-index */
+  text-decoration: none;
+}
+
+.hero-contact-button:hover {
+  color: #000;
+  background: #fff;
+  text-decoration: none;
+}
+
 .menu-toggle-label {
   position: absolute;
   top: 0.5rem; 
@@ -164,12 +192,15 @@ body {
 .menu {
   position: fixed;
   top: 0;
-  right: -300px; /* Hidden initially */
+  right: 0; /* Fullscreen initially */
   height: 100vh;
-  background-color: #fff;
+  background-color: rgba(255,255,255,0.7); /* Translucent white for glass effect */
   z-index: 1001; /* Lower than .menu-toggle-label */
-  width: 300px;
-  transition: right .2s ease-out; 
+  width: 100vw; /* Fullscreen initially */
+  transition: transform .2s ease-out, opacity .5s ease;
+  backdrop-filter: blur(10px);
+  transform: translateY(-100%);
+  opacity: 0;
   
 }
 
@@ -178,11 +209,18 @@ body {
   top: 50%;
   transform: translateY(-50%);
   list-style: none;
-  padding-left: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
 }
 
 .menu ul li {
   margin-bottom: 1rem;
+  transform: translateY(-1rem);
+  opacity: 0;
+  transition: transform .5s ease, opacity .5s ease;
 }
 
 .menu ul li a {
@@ -203,11 +241,16 @@ body {
 }
 
 .menu-toggle-label input[type="checkbox"]:checked ~ .menu {
-  right: 0; /* Visible when checkbox is checked */
+  transform: translateY(0); /* Slides down when checkbox is checked */
+  opacity: 1;
   z-index: 1003; /* Higher than .menu-toggle-label when the menu is opened */
 }
 
-  
+
+.menu-toggle-label input[type="checkbox"]:checked ~ .menu ul li {
+  transform: translateY(0);
+  opacity: 1;
+}
  
 
 
@@ -243,6 +286,15 @@ body {
   }
 }
 
+#tagline {
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+#tagline.show {
+  opacity: 1;
+}
+
 .page {
   display: flex;
   justify-content: center;
@@ -255,7 +307,7 @@ body {
 
 
 .about-page-text {
-  font-family: 'Montserrat', sans-serif;
+  font-family:'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 25px;
   color:black;
   display: flex;
@@ -269,13 +321,29 @@ body {
 }
 
 .about-page-text h2 {
-  font-family: 'Bebas Neue', cursive;
+  font-family: 'Lora', serif;
   font-size: 80px;
+  margin-bottom: 20px; /* give some space for the underline */
+}
+
+@media (max-width: 600px) {
+    .flex-container {
+        flex-direction: column;
+    }
+    .about-img-wrapper, .about-page-text {
+        width: 100%;
+    }
 }
 
 
 
-
+#underline {
+  width: 0;
+  height: 2px;
+  background-color: black;
+  transition: width 2s ease-in-out;
+  align-self: center; /* center the line */
+}
 
 
 
@@ -287,6 +355,7 @@ body {
   padding: 50px;
   position:absolute;
   padding: 20px;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   
 }
 
@@ -403,6 +472,7 @@ button:hover {
 
 
 .projects-section {
+  font-family: 'Lora', serif;
   text-align: center;
   background-color: black;
   color: white;
@@ -511,7 +581,7 @@ body {
 
 #about {
   position: relative;
-  background: pink;
+  background: #6495ED;
   
   
 }
@@ -523,7 +593,7 @@ a, button, input[type=submit], [onclick] {
   position: fixed;
   width: 12px;
   height: 12px;
-  background: turquoise;
+  background: #785BF7;
   border-radius: 50%;
   pointer-events: none;
   z-index: 10000;
@@ -534,7 +604,7 @@ a, button, input[type=submit], [onclick] {
   position: fixed;
   width: 40px;
   height: 40px;
-  border: 3px solid turquoise;
+  border: 3px solid #785BF7;
   border-radius: 50%;
   pointer-events: none;
   z-index: 9999;
@@ -543,6 +613,7 @@ a, button, input[type=submit], [onclick] {
 }
 
 .contact-button {
+  font-family: 'Lora', serif;
   background-color: #2D2D2D;
   color: white;
   padding: 20px 40px;
@@ -563,7 +634,7 @@ a, button, input[type=submit], [onclick] {
 }
 
 .contact-button:hover {
-  background-color: pink;
+  background-color: #6495ED;
 }
 
 .contact-button:hover a {
@@ -637,16 +708,7 @@ a, button, input[type=submit], [onclick] {
   }
 }
 
-/* about page text adjustments for mobile */
-@media (max-width: 600px) {
-  .about-page-text {
-    font-size: 18px;
-    padding: 50px;
-  }
-  .about-page-text h2 {
-    font-size: 60px;
-  }
-}
+
 
 /* footer section adjustments for mobile */
 @media (max-width: 600px) {
@@ -667,17 +729,8 @@ a, button, input[type=submit], [onclick] {
   flex-direction: row; 
 }
 
-@media (max-width: 600px) {
-  .flex-container {
-    flex-direction: column;
-  }
-}
 
-@media (max-width: 600px) {
-  .about-img-wrapper svg {
-    width: 100%; /* the image will resize to the width of its container on smaller screens */
-  }
-}
+
 
  
  
